style: estilizada a mensagem de erro na página login.

--- a/frontend/src/style/optusStyle.css
+++ b/frontend/src/style/optusStyle.css
@@ -50,6 +50,13 @@ header {
   justify-content: center;
 }
 
+.login-div-error, .register-div-error {
+  color: red;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .register-form-input-text {
   margin-bottom: 5px;
 }
@@ -60,13 +67,6 @@ header {
 
 .register-form-div-btn {
   margin-top: 15px;
-}
-
-.register-div-error {
-  color: red;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
 .transition-main {
