style: estilizados os botões voltar e logtout em header.

--- a/frontend/src/style/optusStyle.css
+++ b/frontend/src/style/optusStyle.css
@@ -164,3 +164,15 @@ header {
   font-size: small;
   color: gray;
 }
+
+.header-btn-goBack, .header-btn-logout {
+  padding: 5px;
+  color: white;
+  background: none;
+	border-style: none;
+  border:1px solid white;
+  font-size: x-small;
+	font-weight: bolder;
+  width: 100%;
+  text-align: left;
+}
